Modifier CSS set for all layers.

--- a/release/gff/gff_geez_mesob/source/gff_geez_mesob.css
+++ b/release/gff/gff_geez_mesob/source/gff_geez_mesob.css
@@ -1,7 +1,333 @@
 /*
-  Pastel colors for GFF Keyboards
-*/
+ * Pastel colors for GFF Keyboards
+ * Primarily from: https://www.behance.net/gallery/125405749/Top-10-trending-pastel-color-palettes-in-2021
+ */
+/* modifier keys */
+.kmw-keyboard-gff_geez_mesob #ሀ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ለ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ሐ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #𞟠-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #መ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ሠ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ረ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ሰ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ሸ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ቀ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ቐ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #በ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ቨ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ተ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ቸ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ኀ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ነ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ኘ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #አ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ከ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ኸ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ወ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ዐ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ዘ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ዠ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #የ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ደ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ጀ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ገ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ጘ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ጠ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ጨ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ጰ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ጸ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ፀ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ፈ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #ፐ-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #default-layer-T_ግዕዝ,
+.kmw-keyboard-gff_geez_mesob #non-amharic-layer-T_ግዕዝ
+  { background: #e2f0cb ; color: black ; }
 
+.kmw-keyboard-gff_geez_mesob #ሀ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ለ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ሐ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #𞟠-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #መ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ሠ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ረ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ሰ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ሸ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ቀ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ቐ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #በ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ቨ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ተ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ቸ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ኀ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ነ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ኘ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #አ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ከ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ኸ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ወ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ዐ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ዘ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ዠ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #የ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ደ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ጀ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ገ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ጘ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ጠ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ጨ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ጰ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ጸ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ፀ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ፈ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #ፐ-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #default-layer-T_ካዕብ,
+.kmw-keyboard-gff_geez_mesob #non-amharic-T_ካዕብ
+  { background: #ffffb5 ; color: black ; }
+
+.kmw-keyboard-gff_geez_mesob #ሀ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ለ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ሐ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #𞟠-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #መ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ሠ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ረ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ሰ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ሸ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ቀ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ቐ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #በ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ቨ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ተ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ቸ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ኀ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ነ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ኘ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #አ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ከ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ኸ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ወ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ዐ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ዘ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ዠ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #የ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ደ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ጀ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ገ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ጘ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ጠ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ጨ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ጰ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ጸ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ፀ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ፈ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #ፐ-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #default-layer-T_ሣልስ,
+.kmw-keyboard-gff_geez_mesob #non-amharic-layer-T_ሣልስ 
+  { background: #fea3aa ; color: black ; }
+
+.kmw-keyboard-gff_geez_mesob #ሀ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ለ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ሐ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #𞟠-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #መ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ሠ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ሠ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ረ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ሰ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ሸ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ቀ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ቐ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #በ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ቨ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ተ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ቸ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ኀ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ነ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ኘ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #አ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ከ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ኸ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ወ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ዐ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ዘ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ዠ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #የ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ደ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ጀ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ገ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ጘ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ጠ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ጨ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ጰ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ጸ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ፀ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ፈ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #ፐ-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #default-layer-T_ራብዕ,
+.kmw-keyboard-gff_geez_mesob #non-amharic-layer-T_ራብዕ
+  { background: #ccf1ff ; color: black ; }
+
+.kmw-keyboard-gff_geez_mesob #ሀ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ለ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ሐ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #𞟠-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #መ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ሠ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ረ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ሰ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ሸ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ቀ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ቐ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #በ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ቨ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ተ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ቸ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ኀ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ነ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ኘ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #አ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ከ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ኸ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ወ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ዐ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ዘ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ዠ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #የ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ደ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ጀ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ገ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ጘ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ጠ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ጨ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ጰ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ጸ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ፀ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ፈ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #ፐ-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #default-layer-T_ኃምስ,
+.kmw-keyboard-gff_geez_mesob #non-amharic-layer-T_ኃምስ
+  { background: #e0d7ff ; color: black ; }
+
+.kmw-keyboard-gff_geez_mesob #ሀ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ለ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ሐ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #𞟠-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #መ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ሠ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ረ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ሰ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ሸ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ቀ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ቐ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #በ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ቨ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ተ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ቸ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ኀ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ነ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ኘ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #አ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ከ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ኸ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ወ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ዐ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ዘ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ዠ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #የ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ደ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ጀ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ገ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ጘ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ጠ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ጨ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ጰ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ጸ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ፀ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ፈ-layer-T_ሳድስ,
+.kmw-keyboard-gff_geez_mesob #ፐ-layer-T_ሳድስ 
+{ background: #eceae4; color: black; }
+
+.kmw-keyboard-gff_geez_mesob #ሀ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ለ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ሐ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #𞟠-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #መ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ሠ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ረ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ሰ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ሸ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ቀ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ቐ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #በ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ቨ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ተ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ቸ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ኀ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ነ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ኘ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #አ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ከ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ኸ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ወ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ዐ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ዘ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ዠ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #የ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ደ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ጀ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ገ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ጘ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ጠ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ጨ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ጰ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ጸ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ፀ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ፈ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #ፐ-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #default-layer-T_ሳብዕ,
+.kmw-keyboard-gff_geez_mesob #non-amharic-layer-T_ሳብዕ
+  { background: #fad6b6 ; color: black ; }
+
+
+.kmw-keyboard-gff_geez_mesob #ሀ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ለ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ሐ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #𞟠-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #መ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ሠ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ረ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ሰ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ሸ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ቀ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ቐ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #በ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ቨ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ተ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ቸ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ኀ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ነ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ኘ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #አ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ከ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ኸ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ወ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ዐ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ዘ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ዠ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #የ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ደ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ጀ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ገ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ጘ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ጠ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ጨ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ጰ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ጸ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ፀ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ፈ-layer-T_WWA,
+.kmw-keyboard-gff_geez_mesob #ፐ-layer-T_WWA
+{ background:  #e1cec9  ; color: black; }
 
 .kmw-keyboard-gff_geez_mesob #default-K_SPACE
 { background: #f4eee7; color: #f4eee7; } /* eceae4 */
