Update of refactored phone layout layers.

--- a/release/gff/gff_geez_mesob/source/gff_geez_mesob.css
+++ b/release/gff/gff_geez_mesob/source/gff_geez_mesob.css
@@ -169,6 +169,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1230'], .tablet div.kmw-key.kmw-key-default[id$='U_1230'],  /* ሰ */
 .phone div.kmw-key.kmw-key-default[id$='U_1238'], .tablet div.kmw-key.kmw-key-default[id$='U_1238'],  /* ሸ */
 .phone div.kmw-key.kmw-key-default[id$='U_1240'], .tablet div.kmw-key.kmw-key-default[id$='U_1240'],  /* ቀ */
+.phone div.kmw-key.kmw-key-default[id$='U_1250'], .tablet div.kmw-key.kmw-key-default[id$='U_1250'],  /* ቀ */
 .phone div.kmw-key.kmw-key-default[id$='U_1260'], .tablet div.kmw-key.kmw-key-default[id$='U_1260'],  /* በ */
 .phone div.kmw-key.kmw-key-default[id$='U_1268'], .tablet div.kmw-key.kmw-key-default[id$='U_1268'],  /* ቨ */
 .phone div.kmw-key.kmw-key-default[id$='U_1270'], .tablet div.kmw-key.kmw-key-default[id$='U_1270'],  /* ተ */
