--- a/release/gff/gff_geez_mesob/source/gff_geez_mesob.css
+++ b/release/gff/gff_geez_mesob/source/gff_geez_mesob.css
@@ -87,6 +87,7 @@
   { background: #f4eee7 ; color: #f4eee7 ; } /* eceae4 */
 /* { background:  #ffdbdb  ; color: black; } */
 
+
 /* inner ring */
 .phone div.kmw-key.kmw-key-default[id$='K_H'], .tablet div.kmw-key.kmw-key-default[id$='K_H'],
 .phone div.kmw-key.kmw-key-default[id$='K_M'], .tablet div.kmw-key.kmw-key-default[id$='K_M'],
@@ -96,7 +97,7 @@
 .phone div.kmw-key.kmw-key-default[id$='K_K'], .tablet div.kmw-key.kmw-key-default[id$='K_K'],
 .phone div.kmw-key.kmw-key-default[id$='K_1+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_1+shift'],
 .phone div.kmw-key.kmw-key-default[id$='K_BKSLASH+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_BKSLASH+shift']
-  { background:  #ffffb5 ; color: black; }
+  { background:  #ffffb5 ; color: black ; }
 
 /* 2nd ring */
 .phone div.kmw-key.kmw-key-default[id$='K_L'], .tablet div.kmw-key.kmw-key-default[id$='K_L'],
@@ -113,7 +114,7 @@
 .phone div.kmw-key.kmw-key-default[id$='K_K+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_K+shift'],
 .phone div.kmw-key.kmw-key-default[id$='K_G'], .tablet div.kmw-key.kmw-key-default[id$='K_G'],
 .phone div.kmw-key.kmw-key-default[id$='K_Y'], .tablet div.kmw-key.kmw-key-default[id$='K_Y']
-  { background:  #e2f0cb ; color: black; }
+  { background:  #e2f0cb ; color: black ; }
 
 /* 3rd ring */
 .phone div.kmw-key.kmw-key-default[id$='K_S+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_S+shift'],
@@ -126,7 +127,7 @@
 .phone div.kmw-key.kmw-key-default[id$='K_W'], .tablet div.kmw-key.kmw-key-default[id$='K_W'],
 .phone div.kmw-key.kmw-key-default[id$='K_Z'], .tablet div.kmw-key.kmw-key-default[id$='K_Z'],
 .phone div.kmw-key.kmw-key-default[id$='K_Z+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_Z+shift'] 
-  { background: #ccf1ff ; color: black; }
+  { background: #ccf1ff ; color: black ; }
 
 /* 4th ring */
 .phone div.kmw-key.kmw-key-default[id$='T_1340'], .tablet div.kmw-key.kmw-key-default[id$='T_1340'],
@@ -153,6 +154,7 @@
 .phone div.kmw-key.kmw-key-shift[id$='K_LOPT'], .tablet div.kmw-key.kmw-key-shift[id$='K_LOPT'],
 .phone div.kmw-key.kmw-key-shift[id$='K_BKSP'], .tablet div.kmw-key.kmw-key-shift[id$='K_BKSP'],
 .phone div.kmw-key.kmw-key-shift[id$='K_ENTER'], .tablet div.kmw-key.kmw-key-shift[id$='K_ENTER'],
+.phone div.kmw-key.kmw-key-special[id$='K_SHIFT'], .tablet div.kmw-key.kmw-key-special[id$='K_SHIFT'],
 .phone div.kmw-key.kmw-key-shift[id$='T_EMPTY'], .tablet div.kmw-key.kmw-key-shift[id$='T_EMPTY']
 /* { background: #f3d6ce  ; color: black; } */
   { background: #ece1d5 ; color: black ; }
