--- a/release/gff/gff_geez_mesob_halo/source/gff_geez_mesob_halo.css
+++ b/release/gff/gff_geez_mesob_halo/source/gff_geez_mesob_halo.css
@@ -18,7 +18,7 @@
 .kmw-keyboard-gff_geez_mesob_halo #numerals-K_8, /* 8 */
 .kmw-keyboard-gff_geez_mesob_halo #numerals-K_9, /* 9 */
 .kmw-keyboard-gff_geez_mesob_halo #numerals-K_0 /* 0 */
-  { background:  #ebece6  ; color: black; } 
+  { background:  #ebece6 ; color: black ; } 
 
 
 /* numeral layer: western numerals */
@@ -32,7 +32,7 @@
 .kmw-keyboard-gff_geez_mesob_halo #numerals-U_1370, /* ፹ */
 .kmw-keyboard-gff_geez_mesob_halo #numerals-U_1371, /* ፺ */
 .kmw-keyboard-gff_geez_mesob_halo #numerals-U_137C  /* ፻ */
-  { background:  #ece1d5  ; color: black; } 
+  { background:  #ece1d5 ; color: black ; } 
 
 /* numeral layer: western numerals */
 .kmw-keyboard-gff_geez_mesob_halo #numerals-U_1372, /* ፲ */
@@ -45,7 +45,7 @@
 .kmw-keyboard-gff_geez_mesob_halo #numerals-U_1379, /* ፹ */
 .kmw-keyboard-gff_geez_mesob_halo #numerals-U_137A, /* ፺ */
 .kmw-keyboard-gff_geez_mesob_halo #numerals-U_137B  /* ፻ */
-  { background:  #f3d6ce  ; color: black; }
+  { background:  #f3d6ce ; color: black ; }
 
 /* numeral layer: western numerals */
 .kmw-keyboard-gff_geez_mesob_halo #numerals-K_NUMLOCK,
@@ -59,7 +59,7 @@
 .kmw-keyboard-gff_geez_mesob_halo #numerals-U_1360, /* ፠ */
 .kmw-keyboard-gff_geez_mesob_halo #numerals-U_1368, /* ፨ */
 .kmw-keyboard-gff_geez_mesob_halo #numerals-K_BKSP 
-  { background:  #ece1d5  ; color: black; }
+  { background:  #ece1d5 ; color: black ; }
 
 /* numeral layer: western numerals */
 .kmw-keyboard-gff_geez_mesob_halo #numerals-K_LOPT, 
@@ -71,7 +71,7 @@
 .kmw-keyboard-gff_geez_mesob_halo #numerals-U_203A, /* › */
 .kmw-keyboard-gff_geez_mesob_halo #numerals-U_00BB, /* » */
 .kmw-keyboard-gff_geez_mesob_halo #numerals-K_ENTER
-  { background:  #ebece6  ; color: black; } 
+  { background:  #ebece6 ; color: black ; } 
 
 
 .kmw-keyboard-gff_geez_mesob_halo #numerals-K_SPACE
@@ -79,14 +79,14 @@
 
 .kmw-keyboard-gff_geez_mesob_halo #numerals-K_4\+shift,
 .kmw-keyboard-gff_geez_mesob_halo #numerals-K_PERIOD
-  { background: #f4eee7; color: black; }
+  { background: #f4eee7; color: black ; }
 /*
 *  =========== DEFAULT LAYER ===========
 *
 */
 .phone div.kmw-key.kmw-key-default[id$='K_SPACE'], .tablet div.kmw-key.kmw-key-default[id$='K_SPACE']
   { background: #f4eee7; color: #f4eee7; } /* eceae4 */
-/* { background:  #ffdbdb  ; color: black; } */
+/* { background:  #ffdbdb ; color: black ; } */
 
 .phone div.kmw-key.kmw-key-default[id$='T_MORE'], .tablet div.kmw-key.kmw-key-default[id$='T_MORE'] {
     color: red;
@@ -110,7 +110,7 @@
 .phone div.kmw-key.kmw-key-default[id$='K_K'], .tablet div.kmw-key.kmw-key-default[id$='K_K'],
 .phone div.kmw-key.kmw-key-default[id$='K_1+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_1+shift'],
 .phone div.kmw-key.kmw-key-default[id$='K_SLASH+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_SLASH+shift'] 
-  { background:  #ffffb5  ; color: black; }
+  { background:  #ffffb5 ; color: black ; }
 
 
 /* 2nd ring */
@@ -128,7 +128,7 @@
 .phone div.kmw-key.kmw-key-default[id$='K_K+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_K+shift'],
 .phone div.kmw-key.kmw-key-default[id$='K_G'], .tablet div.kmw-key.kmw-key-default[id$='K_G'],
 .phone div.kmw-key.kmw-key-default[id$='K_Y'], .tablet div.kmw-key.kmw-key-default[id$='K_Y']
-  { background:  #e2f0cb ; color: black; }
+  { background:  #e2f0cb ; color: black ; }
 
 
 /* 3rd ring */
@@ -142,7 +142,7 @@
 .phone div.kmw-key.kmw-key-default[id$='K_W'], .tablet div.kmw-key.kmw-key-default[id$='K_W'],
 .phone div.kmw-key.kmw-key-default[id$='K_Z'], .tablet div.kmw-key.kmw-key-default[id$='K_Z'],
 .phone div.kmw-key.kmw-key-default[id$='K_Z+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_Z+shift'] 
-  { background: #ccf1ff  ; color: black; }
+  { background: #ccf1ff ; color: black ; }
 
  
 /* 4th ring */
@@ -156,48 +156,48 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1362'], .tablet div.kmw-key.kmw-key-default[id$='U_1362'],
 .phone div.kmw-key.kmw-key-default[id$='T_1280'], .tablet div.kmw-key.kmw-key-default[id$='T_1280'],
 .phone div.kmw-key.kmw-key-default[id$='K_NUMLOCK'], .tablet div.kmw-key.kmw-key-default[id$='K_NUMLOCK'] 
-/* { background: #ece1d5  ; color: black; } */
-  { background: #f3d6ce  ; color: black; }
+/* { background: #ece1d5 ; color: black ; } */
+  { background: #f3d6ce ; color: black ; }
 
 
 /* 5th ring - modifier keys */
 .kmw-keyboard-gff_amharic #default-K_TWAA,
-.phone div.kmw-key.kmw-key-default[id$='K_2+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_2+shift'],
+.phone div.kmw-key.kmw-key-special[id$='K_SHIFT'], .tablet div.kmw-key.kmw-key-special[id$='K_SHIFT'],
 .phone div.kmw-key.kmw-key-shift[id$='K_LOPT'], .tablet div.kmw-key.kmw-key-shift[id$='K_LOPT'],
 .phone div.kmw-key.kmw-key-shift[id$='K_BKSP'], .tablet div.kmw-key.kmw-key-shift[id$='K_BKSP'],
 .phone div.kmw-key.kmw-key-shift[id$=K_ENTER], .tablet div.kmw-key.kmw-key-shift[id$=K_ENTER]
-/* { background: #f3d6ce  ; color: black; } */
-  { background: #ece1d5  ; color: black; }
- 
+/* { background: #f3d6ce ; color: black ; } */
+  { background: #ece1d5 ; color: black ; }
+
 
 
 /* default layer ግዕዝ */
 .phone div.kmw-key.kmw-key-default[id$='T_ግዕዝ'], .tablet div.kmw-key.kmw-key-default[id$='T_ግዕዝ']
-  { background:  #e2f0cb; color: black; } /*#baed91 */
+  { background:  #e2f0cb; color: black ; } /*#baed91 */
 
 /* default layer ካዕብ */
 .phone div.kmw-key.kmw-key-default[id$='T_ካዕብ'], .tablet div.kmw-key.kmw-key-default[id$='T_ካዕብ']
-  { background:  #ffffb5 ; color: black; } /* #faf884 */ 
+  { background:  #ffffb5 ; color: black ; } /* #faf884 */ 
 
 /* default layer ሣልስ */
 .phone div.kmw-key.kmw-key-default[id$='T_ሣልስ'], .tablet div.kmw-key.kmw-key-default[id$='T_ሣልስ']
-  { background:  #fea3aa  ; color: black; }
+  { background:  #fea3aa ; color: black ; }
 
 /* default layer ራብዕ */
 .phone div.kmw-key.kmw-key-default[id$='T_ራብዕ'], .tablet div.kmw-key.kmw-key-default[id$='T_ራብዕ']
-  { background:  #ccf1ff  ; color: black; } /* #b2cefe */
+  { background:  #ccf1ff ; color: black ; } /* #b2cefe */
 
 /* default layer ኃምስ */
 .phone div.kmw-key.kmw-key-default[id$='T_ኃምስ'], .tablet div.kmw-key.kmw-key-default[id$='T_ኃምስ']
-  { background:  #e0d7ff  ; color: black; } /* #f2a2e8 */
+  { background:  #e0d7ff ; color: black ; } /* #f2a2e8 */
 
 /* default layer ሳድስ */
 .phone div.kmw-key.kmw-key-default[id$='T_ሳድስ'], .tablet div.kmw-key.kmw-key-default[id$='T_ሳድስ']
-  { background: #eceae4; color: black; }
+  { background: #eceae4; color: black ; }
 
 /* default layer ሳብዕ */
 .phone div.kmw-key.kmw-key-default[id$='T_ሳብዕ'], .tablet div.kmw-key.kmw-key-default[id$='T_ሳብዕ']
-  { background:  #fad6b6  ; color: black; } /* f8b88b*/
+  { background:  #fad6b6 ; color: black ; } /* f8b88b*/
 
 
 /* default layer ዘመደ-ራብዕ */
@@ -227,9 +227,9 @@
 .phone div.kmw-key.kmw-key-default[id$='U_134F'], .tablet div.kmw-key.kmw-key-default[id$='U_134F'], /* ፏ */
 .phone div.kmw-key.kmw-key-default[id$='U_1357'], .tablet div.kmw-key.kmw-key-default[id$='U_1357'],  /* ፗ */
 .phone div.kmw-key.kmw-key-default[id$='T_WWA'], .tablet div.kmw-key.kmw-key-default[id$='T_WWA']
-/*  { background:  #e1cec9  ; color: black; } */
+/*  { background:  #e1cec9 ; color: black ; } */
     {
-    background: #ffffff; color: black;
+    background: #ffffff; color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #ccf1ff 100%);
   }
 
@@ -248,7 +248,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1388'], .tablet div.kmw-key.kmw-key-default[id$='U_1388'],  /* ᎈ */
 .phone div.kmw-key.kmw-key-default[id$='U_138C'], .tablet div.kmw-key.kmw-key-default[id$='U_138C']   /* ᎌ */
   {
-    background: #ffffff; color: black;
+    background: #ffffff; color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #e2f0cb 100%);
   }
 
@@ -269,7 +269,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_138B'], .tablet div.kmw-key.kmw-key-default[id$='U_138B'],  /* ᎋ */
 .phone div.kmw-key.kmw-key-default[id$='U_138F'], .tablet div.kmw-key.kmw-key-default[id$='U_138F']   /* ᎏ */
   {
-    background: #ffffff; color: black;
+    background: #ffffff; color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #eceae4 100%);
   }
 
@@ -290,7 +290,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FB'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FB'], /* 𞟻 */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FD'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FD']  /* 𞟽 */
   {
-    background: #ffffff; color: black;
+    background: #ffffff; color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #fea3aa 100%);
   }
 
@@ -303,7 +303,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1313'], .tablet div.kmw-key.kmw-key-default[id$='U_1313'], /* ጓ */
 .phone div.kmw-key.kmw-key-default[id$='U_131F'], .tablet div.kmw-key.kmw-key-default[id$='U_131F']  /* ጟ */
   {
-    background: #ffffff; color: black;
+    background: #ffffff; color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #ccf1ff 100%);
   }
 
@@ -324,6 +324,6 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FC'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FC'], /* 𞟼 */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FE'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FE']  /* 𞟾 */
   {
-    background: #ffffff; color: black;
+    background: #ffffff; color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #e0d7ff 100%);
   }
