--- a/release/gff/gff_geez_mesob_halo/source/gff_geez_mesob_halo.css
+++ b/release/gff/gff_geez_mesob_halo/source/gff_geez_mesob_halo.css
@@ -20,7 +20,6 @@
 .kmw-keyboard-gff_geez_mesob_halo #numerals-K_0 /* 0 */
   { background:  #ebece6 ; color: black ; } 
 
-
 /* numeral layer: western numerals */
 .kmw-keyboard-gff_geez_mesob_halo #numerals-U_1369, /* ፲ */
 .kmw-keyboard-gff_geez_mesob_halo #numerals-U_136A, /* ፳ */
@@ -73,7 +72,6 @@
 .kmw-keyboard-gff_geez_mesob_halo #numerals-K_ENTER
   { background:  #ebece6 ; color: black ; } 
 
-
 .kmw-keyboard-gff_geez_mesob_halo #numerals-K_SPACE
   { background: #f4eee7; color: #f4eee7; } /* light peach: fff5ec */
 
@@ -100,7 +98,6 @@
 }
 
 
-  
 /* inner ring */
 .phone div.kmw-key.kmw-key-default[id$='K_H'], .tablet div.kmw-key.kmw-key-default[id$='K_H'],
 .phone div.kmw-key.kmw-key-default[id$='K_M'], .tablet div.kmw-key.kmw-key-default[id$='K_M'],
@@ -111,7 +108,6 @@
 .phone div.kmw-key.kmw-key-default[id$='K_1+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_1+shift'],
 .phone div.kmw-key.kmw-key-default[id$='K_SLASH+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_SLASH+shift'] 
   { background:  #ffffb5 ; color: black ; }
-
 
 /* 2nd ring */
 .phone div.kmw-key.kmw-key-default[id$='K_L'], .tablet div.kmw-key.kmw-key-default[id$='K_L'],
@@ -130,7 +126,6 @@
 .phone div.kmw-key.kmw-key-default[id$='K_Y'], .tablet div.kmw-key.kmw-key-default[id$='K_Y']
   { background:  #e2f0cb ; color: black ; }
 
-
 /* 3rd ring */
 .phone div.kmw-key.kmw-key-default[id$='K_S+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_S+shift'],
 .phone div.kmw-key.kmw-key-default[id$='K_D'], .tablet div.kmw-key.kmw-key-default[id$='K_D'],
@@ -144,7 +139,6 @@
 .phone div.kmw-key.kmw-key-default[id$='K_Z+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_Z+shift'] 
   { background: #ccf1ff ; color: black ; }
 
- 
 /* 4th ring */
 .phone div.kmw-key.kmw-key-default[id$='T_1340'], .tablet div.kmw-key.kmw-key-default[id$='T_1340'],
 .phone div.kmw-key.kmw-key-default[id$='K_J'], .tablet div.kmw-key.kmw-key-default[id$='K_J'],
@@ -159,7 +153,6 @@
 /* { background: #ece1d5 ; color: black ; } */
   { background: #f3d6ce ; color: black ; }
 
-
 /* 5th ring - modifier keys */
 .kmw-keyboard-gff_amharic #default-K_TWAA,
 .phone div.kmw-key.kmw-key-special[id$='K_SHIFT'], .tablet div.kmw-key.kmw-key-special[id$='K_SHIFT'],
@@ -168,8 +161,6 @@
 .phone div.kmw-key.kmw-key-shift[id$=K_ENTER], .tablet div.kmw-key.kmw-key-shift[id$=K_ENTER]
 /* { background: #f3d6ce ; color: black ; } */
   { background: #ece1d5 ; color: black ; }
-
-
 
 /* default layer ግዕዝ */
 .phone div.kmw-key.kmw-key-default[id$='T_ግዕዝ'], .tablet div.kmw-key.kmw-key-default[id$='T_ግዕዝ']
@@ -199,33 +190,7 @@
 .phone div.kmw-key.kmw-key-default[id$='T_ሳብዕ'], .tablet div.kmw-key.kmw-key-default[id$='T_ሳብዕ']
   { background:  #fad6b6 ; color: black ; } /* f8b88b*/
 
-
 /* default layer ዘመደ-ራብዕ */
-.phone div.kmw-key.kmw-key-default[id$='U_120F'], .tablet div.kmw-key.kmw-key-default[id$='U_120F'], /* ሏ */
-.phone div.kmw-key.kmw-key-default[id$='U_1217'], .tablet div.kmw-key.kmw-key-default[id$='U_1217'], /* ሗ */
-.phone div.kmw-key.kmw-key-default[id$='U_121F'], .tablet div.kmw-key.kmw-key-default[id$='U_121F'], /* ሟ */
-.phone div.kmw-key.kmw-key-default[id$='U_1227'], .tablet div.kmw-key.kmw-key-default[id$='U_1227'], /* ሧ */
-.phone div.kmw-key.kmw-key-default[id$='U_122F'], .tablet div.kmw-key.kmw-key-default[id$='U_122F'], /* ሯ */
-.phone div.kmw-key.kmw-key-default[id$='U_1237'], .tablet div.kmw-key.kmw-key-default[id$='U_1237'], /* ሷ */
-.phone div.kmw-key.kmw-key-default[id$='U_123F'], .tablet div.kmw-key.kmw-key-default[id$='U_123F'], /* ሿ */
-.phone div.kmw-key.kmw-key-default[id$='U_1267'], .tablet div.kmw-key.kmw-key-default[id$='U_1267'], /* ቧ */
-.phone div.kmw-key.kmw-key-default[id$='U_126F'], .tablet div.kmw-key.kmw-key-default[id$='U_126F'], /* ቯ */
-.phone div.kmw-key.kmw-key-default[id$='U_1277'], .tablet div.kmw-key.kmw-key-default[id$='U_1277'], /* ቷ */
-.phone div.kmw-key.kmw-key-default[id$='U_127F'], .tablet div.kmw-key.kmw-key-default[id$='U_127F'], /* ቿ */
-.phone div.kmw-key.kmw-key-default[id$='U_1297'], .tablet div.kmw-key.kmw-key-default[id$='U_1297'], /* ኗ */
-.phone div.kmw-key.kmw-key-default[id$='U_129F'], .tablet div.kmw-key.kmw-key-default[id$='U_129F'], /* ኟ */
-.phone div.kmw-key.kmw-key-default[id$='U_12A7'], .tablet div.kmw-key.kmw-key-default[id$='U_12A7'], /* ኧ */
-.phone div.kmw-key.kmw-key-default[id$='U_12DF'], .tablet div.kmw-key.kmw-key-default[id$='U_12DF'], /* ዟ */
-.phone div.kmw-key.kmw-key-default[id$='U_12E7'], .tablet div.kmw-key.kmw-key-default[id$='U_12E7'], /* ዧ */
-.phone div.kmw-key.kmw-key-default[id$='U_12F7'], .tablet div.kmw-key.kmw-key-default[id$='U_12F7'], /* ዷ*/
-.phone div.kmw-key.kmw-key-default[id$='U_12FF'], .tablet div.kmw-key.kmw-key-default[id$='U_12FF'], /* ዿ */
-.phone div.kmw-key.kmw-key-default[id$='U_1307'], .tablet div.kmw-key.kmw-key-default[id$='U_1307'], /* ጇ */
-.phone div.kmw-key.kmw-key-default[id$='U_1327'], .tablet div.kmw-key.kmw-key-default[id$='U_1327'], /* ጧ */
-.phone div.kmw-key.kmw-key-default[id$='U_132F'], .tablet div.kmw-key.kmw-key-default[id$='U_132F'], /* ጯ */
-.phone div.kmw-key.kmw-key-default[id$='U_1337'], .tablet div.kmw-key.kmw-key-default[id$='U_1337'], /* ጷ */
-.phone div.kmw-key.kmw-key-default[id$='U_133F'], .tablet div.kmw-key.kmw-key-default[id$='U_133F'], /* ጿ */
-.phone div.kmw-key.kmw-key-default[id$='U_134F'], .tablet div.kmw-key.kmw-key-default[id$='U_134F'], /* ፏ */
-.phone div.kmw-key.kmw-key-default[id$='U_1357'], .tablet div.kmw-key.kmw-key-default[id$='U_1357'],  /* ፗ */
 .phone div.kmw-key.kmw-key-default[id$='T_WWA'], .tablet div.kmw-key.kmw-key-default[id$='T_WWA']
 /*  { background:  #e1cec9 ; color: black ; } */
     {
@@ -233,96 +198,32 @@
     background: linear-gradient(180deg, #ffffff 0%, #ccf1ff 100%);
   }
 
-
 /* ዘመደ-ግዕዝ */
-.phone div.kmw-key.kmw-key-default[id$='U_1248'], .tablet div.kmw-key.kmw-key-default[id$='U_1248'],  /* ቈ */
-.phone div.kmw-key.kmw-key-default[id$='U_1258'], .tablet div.kmw-key.kmw-key-default[id$='U_1258'],  /* ቘ */
-.phone div.kmw-key.kmw-key-default[id$='U_1288'], .tablet div.kmw-key.kmw-key-default[id$='U_1288'],  /* ኈ */
-.phone div.kmw-key.kmw-key-default[id$='U_12B0'], .tablet div.kmw-key.kmw-key-default[id$='U_12B0'],  /* ኰ */
-.phone div.kmw-key.kmw-key-default[id$='U_12C0'], .tablet div.kmw-key.kmw-key-default[id$='U_12C0'],  /* ዀ */
-.phone div.kmw-key.kmw-key-default[id$='U_1310'], .tablet div.kmw-key.kmw-key-default[id$='U_1310'],  /* ጐ */
-.phone div.kmw-key.kmw-key-default[id$='U_2D93'], .tablet div.kmw-key.kmw-key-default[id$='U_2D93'],  /* ⶓ */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7E8'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7E8'], /* 𞟨 */
-.phone div.kmw-key.kmw-key-default[id$='U_1380'], .tablet div.kmw-key.kmw-key-default[id$='U_1380'],  /* ᎀ */
-.phone div.kmw-key.kmw-key-default[id$='U_1384'], .tablet div.kmw-key.kmw-key-default[id$='U_1384'],  /* ᎄ */
-.phone div.kmw-key.kmw-key-default[id$='U_1388'], .tablet div.kmw-key.kmw-key-default[id$='U_1388'],  /* ᎈ */
-.phone div.kmw-key.kmw-key-default[id$='U_138C'], .tablet div.kmw-key.kmw-key-default[id$='U_138C']   /* ᎌ */
+.phone div.kmw-key.kmw-key-default[id$='T_WWE'], .tablet div.kmw-key.kmw-key-default[id$='T_WWE']
   {
     background: #ffffff; color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #e2f0cb 100%);
   }
 
 /* ዘመደ-ካዕብ */
-.phone div.kmw-key.kmw-key-default[id$='U_124D'], .tablet div.kmw-key.kmw-key-default[id$='U_124D'],  /* ቍ */
-.phone div.kmw-key.kmw-key-default[id$='U_125D'], .tablet div.kmw-key.kmw-key-default[id$='U_125D'],  /* ቝ */
-.phone div.kmw-key.kmw-key-default[id$='U_128D'], .tablet div.kmw-key.kmw-key-default[id$='U_128D'],  /* ኍ */
-.phone div.kmw-key.kmw-key-default[id$='U_12B5'], .tablet div.kmw-key.kmw-key-default[id$='U_12B5'],  /* ኵ */
-.phone div.kmw-key.kmw-key-default[id$='U_12C5'], .tablet div.kmw-key.kmw-key-default[id$='U_12C5'],  /* ዅ */
-.phone div.kmw-key.kmw-key-default[id$='U_1315'], .tablet div.kmw-key.kmw-key-default[id$='U_1315'],  /* ጕ */
-.phone div.kmw-key.kmw-key-default[id$='U_2D96'], .tablet div.kmw-key.kmw-key-default[id$='U_2D96'],  /* ⶔ */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7F7'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F7'], /* 𞟷 */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7EB'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7EB'], /* 𞟫 */
-.phone div.kmw-key.kmw-key-default[id$='U_1383'], .tablet div.kmw-key.kmw-key-default[id$='U_1383'],  /* ᎃ */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7F2'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F2'], /* 𞟲 */
-.phone div.kmw-key.kmw-key-default[id$='U_1387'], .tablet div.kmw-key.kmw-key-default[id$='U_1387'],  /* ᎇ */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7FA'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FA'], /* 𞟺 */
-.phone div.kmw-key.kmw-key-default[id$='U_138B'], .tablet div.kmw-key.kmw-key-default[id$='U_138B'],  /* ᎋ */
-.phone div.kmw-key.kmw-key-default[id$='U_138F'], .tablet div.kmw-key.kmw-key-default[id$='U_138F']   /* ᎏ */
+.phone div.kmw-key.kmw-key-default[id$='T_WWU'], .tablet div.kmw-key.kmw-key-default[id$='T_WWU'],
+.phone div.kmw-key.kmw-key-default[id$='T_WWU_GURAGE'], .tablet div.kmw-key.kmw-key-default[id$='T_WWU_GURAGE']
   {
     background: #ffffff; color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #eceae4 100%);
   }
 
 /* ዘመደ-ሣልስ */
-.phone div.kmw-key.kmw-key-default[id$='U_124A'], .tablet div.kmw-key.kmw-key-default[id$='U_124A'],  /* ቊ */
-.phone div.kmw-key.kmw-key-default[id$='U_125A'], .tablet div.kmw-key.kmw-key-default[id$='U_125A'],  /* ቚ */
-.phone div.kmw-key.kmw-key-default[id$='U_128A'], .tablet div.kmw-key.kmw-key-default[id$='U_128A'],  /* ኊ */
-.phone div.kmw-key.kmw-key-default[id$='U_12B2'], .tablet div.kmw-key.kmw-key-default[id$='U_12B2'],  /* ኲ */
-.phone div.kmw-key.kmw-key-default[id$='U_12C2'], .tablet div.kmw-key.kmw-key-default[id$='U_12C2'],  /* ዂ */
-.phone div.kmw-key.kmw-key-default[id$='U_1312'], .tablet div.kmw-key.kmw-key-default[id$='U_1312'],  /* ጒ */
-.phone div.kmw-key.kmw-key-default[id$='U_2D94'], .tablet div.kmw-key.kmw-key-default[id$='U_2D94'],  /* ⶔ */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7F5'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F5'], /* 𞟵 */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7E9'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7E9'], /* 𞟩 */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7ED'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7ED'], /* 𞟭 */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7F0'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F0'], /* 𞟰 */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7F3'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F3'], /* 𞟳 */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7F8'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F8'], /* 𞟸 */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7FB'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FB'], /* 𞟻 */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7FD'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FD']  /* 𞟽 */
+.phone div.kmw-key.kmw-key-default[id$='T_WWI'], .tablet div.kmw-key.kmw-key-default[id$='T_WWI'],
+.phone div.kmw-key.kmw-key-default[id$='T_WWI_GURAGE'], .tablet div.kmw-key.kmw-key-default[id$='T_WWI_GURAGE']
   {
     background: #ffffff; color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #fea3aa 100%);
   }
 
-/* ዘመደ-ራብዕ */
-.phone div.kmw-key.kmw-key-default[id$='U_124B'], .tablet div.kmw-key.kmw-key-default[id$='U_124B'], /* ቋ */
-.phone div.kmw-key.kmw-key-default[id$='U_125B'], .tablet div.kmw-key.kmw-key-default[id$='U_125B'], /* ቛ */
-.phone div.kmw-key.kmw-key-default[id$='U_128B'], .tablet div.kmw-key.kmw-key-default[id$='U_128B'], /* ኋ */
-.phone div.kmw-key.kmw-key-default[id$='U_12B3'], .tablet div.kmw-key.kmw-key-default[id$='U_12B3'], /* ኳ */
-.phone div.kmw-key.kmw-key-default[id$='U_12C3'], .tablet div.kmw-key.kmw-key-default[id$='U_12C3'], /* ዃ */
-.phone div.kmw-key.kmw-key-default[id$='U_1313'], .tablet div.kmw-key.kmw-key-default[id$='U_1313'], /* ጓ */
-.phone div.kmw-key.kmw-key-default[id$='U_131F'], .tablet div.kmw-key.kmw-key-default[id$='U_131F']  /* ጟ */
-  {
-    background: #ffffff; color: black ;
-    background: linear-gradient(180deg, #ffffff 0%, #ccf1ff 100%);
-  }
-
 /* ዘመደ-ኃምስ */
-.phone div.kmw-key.kmw-key-default[id$='U_124C'], .tablet div.kmw-key.kmw-key-default[id$='U_124C'],  /* ቌ */
-.phone div.kmw-key.kmw-key-default[id$='U_125C'], .tablet div.kmw-key.kmw-key-default[id$='U_125C'],  /* ቜ */
-.phone div.kmw-key.kmw-key-default[id$='U_128C'], .tablet div.kmw-key.kmw-key-default[id$='U_128C'],  /* ኌ */
-.phone div.kmw-key.kmw-key-default[id$='U_12B4'], .tablet div.kmw-key.kmw-key-default[id$='U_12B4'],  /* ኴ */
-.phone div.kmw-key.kmw-key-default[id$='U_12C4'], .tablet div.kmw-key.kmw-key-default[id$='U_12C4'],  /* ዄ */
-.phone div.kmw-key.kmw-key-default[id$='U_1314'], .tablet div.kmw-key.kmw-key-default[id$='U_1314'],  /* ጔ */
-.phone div.kmw-key.kmw-key-default[id$='U_2D95'], .tablet div.kmw-key.kmw-key-default[id$='U_2D95'],  /* ⶕ */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7EA'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7EA'], /* 𞟪 */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7EE'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7EE'], /* 𞟮 */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7F1'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F1'], /* 𞟱 */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7F4'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F4'], /* 𞟴 */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7F6'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F6'], /* 𞟶 */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7F9'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F9'], /* 𞟹 */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7FC'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FC'], /* 𞟼 */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7FE'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FE']  /* 𞟾 */
+.phone div.kmw-key.kmw-key-default[id$='T_WWEE'], .tablet div.kmw-key.kmw-key-default[id$='T_WWEE'],
+.phone div.kmw-key.kmw-key-default[id$='T_WWEE_GURAGE'], .tablet div.kmw-key.kmw-key-default[id$='T_WWEE_GURAGE']
   {
     background: #ffffff; color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #e0d7ff 100%);
