--- a/release/gff/gff_geez_mesob/source/gff_geez_mesob.css
+++ b/release/gff/gff_geez_mesob/source/gff_geez_mesob.css
@@ -154,7 +154,7 @@
 .phone div.kmw-key.kmw-key-shift[id$='K_BKSP'], .tablet div.kmw-key.kmw-key-shift[id$='K_BKSP'],
 .phone div.kmw-key.kmw-key-shift[id$='K_ENTER'], .tablet div.kmw-key.kmw-key-shift[id$='K_ENTER'],
 .phone div.kmw-key.kmw-key-special[id$='K_SHIFT'], .tablet div.kmw-key.kmw-key-special[id$='K_SHIFT'],
-.phone div.kmw-key.kmw-key-shift[id$='T_EMPTY'], .tablet div.kmw-key.kmw-key-shift[id$='T_EMPTY']
+.phone div.kmw-key.kmw-key-deadkey[id$='T_EMPTY'], .tablet div.kmw-key.kmw-key-deadkey[id$='T_EMPTY']
 /* { background: #f3d6ce  ; color: black; } */
   { background: #ece1d5 ; color: black ; }
 
